develop: La url de openapi está visible y lista para empezar a desarrollar el endpoint, también se ha añadido la capacidad de interactuar con una BD h2 la cual cuenta con ficheros de creación y carga de BD
